--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=abby.oboe.reeds@gmail.com
-spring.mail.password=rbvibogamafvuhqh
+spring.mail.password=*redacted*
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
