--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,6 @@ spring.mail.password=*redacted*
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#resolve this...
 #from previous project
 spring.main.allow-circular-references=true
